--- a/Calculator/public_html/index.html
+++ b/Calculator/public_html/index.html
@@ -13,33 +13,43 @@ Programmer: Craig Parker
     </head>
     <body>
         <div id="calculator">
-            <input type="text" name="calcOutput" value="0" size="25" /> 
-            <div>
-                <button class="operations" id="division">/</button>
-                <button class="operations" id="multiplication">*</button>
-                <button class="operations" id="subtraction">-</button>
-                <button class="operations" id="addition">+</button>
-            </div>
-            <div>
-                <button class="calcNumbers">9</button>
-                <button class="calcNumbers">8</button>
-                <button class="calcNumbers">7</button>
-            </div>
-            <div>
-                <button class="calcNumbers">6</button>
-                <button class="calcNumbers">5</button>
-                <button class="calcNumbers">4</button>
-            </div>
-            <div>
-                <button class="calcNumbers">3</button>
-                <button class="calcNumbers">2</button>
-                <button class="calcNumbers">1</button>
-            </div>
-            <div>
-                <button id="zeroButton">0</button>
-            </div>
-            
-            
+            <div id="container1">    
+                <input type="text" name="calcOutput" value="0" size="25" /> 
+                <div class="container2"> 
+                    <div>
+                        <button class="operations" id="division">/</button>
+                        <button class="operations" id="multiplication">*</button>
+                        <button class="operations" id="subtraction">-</button>
+                    </div>
+                    <div>
+                        <button class="calcNumbers">9</button>
+                        <button class="calcNumbers">8</button>
+                        <button class="calcNumbers">7</button>
+                    </div>
+                    <div>
+                        <button class="calcNumbers">6</button>
+                        <button class="calcNumbers">5</button>
+                        <button class="calcNumbers">4</button>
+                    </div>
+                    <div>
+                        <button class="calcNumbers">3</button>
+                        <button class="calcNumbers">2</button>
+                        <button class="calcNumbers">1</button>
+                    </div>
+                    <div>
+                    <button id="zeroButton">0</button>
+                    <button id="decimal" class="operations">.</button>
+                    </div>
+                </div>    
+                <div class="container2">
+                    <div>
+                    <button class="operations" id="addition">+</button>
+                    </div>
+                    <div>
+                    <button id="enter">Enter</button>
+                    </div>
+                </div>
+            </div>    
         </div>
     </body>
 </html>
