--- a/Calculator/public_html/index.html
+++ b/Calculator/public_html/index.html
@@ -14,7 +14,7 @@ Programmer: Craig Parker
     <body>
         <div id="calculator">
             <div id="container1">    
-                <input type="text" name="calcOutput" value="0" size="25" /> 
+                <input type="text" id="calcOutput" name="calcOutput" value="0" /> 
                 <div class="container2"> 
                     <div>
                         <button class="operations" id="division">/</button>
@@ -22,19 +22,19 @@ Programmer: Craig Parker
                         <button class="operations" id="subtraction">-</button>
                     </div>
                     <div>
-                        <button class="calcNumbers">9</button>
-                        <button class="calcNumbers">8</button>
                         <button class="calcNumbers">7</button>
+                        <button class="calcNumbers">8</button>
+                        <button class="calcNumbers">9</button>
                     </div>
                     <div>
-                        <button class="calcNumbers">6</button>
-                        <button class="calcNumbers">5</button>
                         <button class="calcNumbers">4</button>
+                        <button class="calcNumbers">5</button>
+                        <button class="calcNumbers">6</button>
                     </div>
                     <div>
-                        <button class="calcNumbers">3</button>
-                        <button class="calcNumbers">2</button>
                         <button class="calcNumbers">1</button>
+                        <button class="calcNumbers">2</button>
+                        <button class="calcNumbers">3</button>
                     </div>
                     <div>
                     <button id="zeroButton">0</button>
