Began adding javascript functions
Made basic button function to input numbers into the input at top of
calculator.  Only active on button number 1 currently.  Test successful
will expand functionality soon

--- a/Calculator/public_html/index.html
+++ b/Calculator/public_html/index.html
@@ -9,6 +9,7 @@ Programmer: Craig Parker
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script type="text/javascript" src="script.js"></script>
                 
     </head>
     <body>
@@ -32,7 +33,7 @@ Programmer: Craig Parker
                         <button class="calcNumbers">6</button>
                     </div>
                     <div>
-                        <button class="calcNumbers">1</button>
+                        <button onclick="numberInput()" class="calcNumbers">1</button>
                         <button class="calcNumbers">2</button>
                         <button class="calcNumbers">3</button>
                     </div>
