added functionality to number buttons
added functionality to the number buttons and began working on the
addition function.  Addition function in test stages.

--- a/Calculator/public_html/index.html
+++ b/Calculator/public_html/index.html
@@ -23,28 +23,28 @@ Programmer: Craig Parker
                         <button class="operations" id="subtraction">-</button>
                     </div>
                     <div>
-                        <button class="calcNumbers">7</button>
-                        <button class="calcNumbers">8</button>
-                        <button class="calcNumbers">9</button>
+                        <button onclick="numberInput(this)" class="calcNumbers">7</button>
+                        <button onclick="numberInput(this)" class="calcNumbers">8</button>
+                        <button onclick="numberInput(this)" class="calcNumbers">9</button>
                     </div>
                     <div>
-                        <button class="calcNumbers">4</button>
-                        <button class="calcNumbers">5</button>
-                        <button class="calcNumbers">6</button>
+                        <button onclick="numberInput(this)" class="calcNumbers">4</button>
+                        <button onclick="numberInput(this)" class="calcNumbers">5</button>
+                        <button onclick="numberInput(this)" class="calcNumbers">6</button>
                     </div>
                     <div>
-                        <button onclick="numberInput()" class="calcNumbers">1</button>
-                        <button class="calcNumbers">2</button>
-                        <button class="calcNumbers">3</button>
+                        <button onclick="numberInput(this)" class="calcNumbers">1</button>
+                        <button onclick="numberInput(this)" class="calcNumbers">2</button>
+                        <button onclick="numberInput(this)" class="calcNumbers">3</button>
                     </div>
                     <div>
-                    <button id="zeroButton">0</button>
-                    <button id="decimal" class="operations">.</button>
+                    <button onclick="numberInput(this)" id="zeroButton">0</button>
+                    <button onclick="numberInput(this)" id="decimal" class="operations">.</button>
                     </div>
                 </div>    
                 <div class="container2">
                     <div>
-                    <button class="operations" id="addition">+</button>
+                        <button onclick="additionOperation()" class="operations" id="addition">+</button>
                     </div>
                     <div>
                     <button id="enter">Enter</button>
