Finished construction of addition operation
Modified HTML value for the input box to read blank.  Updated script.js
file with new addition operator code that seems more stable during
tests.

--- a/Calculator/public_html/index.html
+++ b/Calculator/public_html/index.html
@@ -15,7 +15,7 @@ Programmer: Craig Parker
     <body>
         <div id="calculator">
             <div id="container1">    
-                <input type="text" id="calcOutput" name="calcOutput" value="0" /> 
+                <input type="text" id="calcOutput" name="calcOutput" value="" /> 
                 <div class="container2"> 
                     <div>
                         <button class="operations" id="division">/</button>
