Added functionality to the Clear, MR, MS, and MC buttons
added javaScript to the discussed buttons to give them functionality.
All buttons now operate as intended.

--- a/Calculator/public_html/index.html
+++ b/Calculator/public_html/index.html
@@ -17,10 +17,10 @@ Programmer: Craig Parker
             <div id="container1">    
                 <input type="text" id="calcOutput" name="calcOutput" value="" /> 
                 <div class="container2">
-                    <button class="calcUtility" id="clear">Clear</button>
-                    <button class="calcUtility">MS</button>
-                    <button class="calcUtility">MR</button>
-                    <button class="calcUtility">MC</button>                        
+                    <button id="clear">Clear</button>
+                    <button id="memorySave" class="calcMemory">MS</button>
+                    <button id="memoryRecall" class="calcMemory">MR</button>
+                    <button id="memoryClear" class="calcMemory">MC</button>                        
                 </div>
                 <div class="container2"> 
                     <div>
