Changed enter button to equals
changed enter button to equals button and id.  Increased text size of
all operations.

--- a/Calculator/public_html/index.html
+++ b/Calculator/public_html/index.html
@@ -53,7 +53,7 @@ Programmer: Craig Parker
                         <button  class="operations" id="addition">+</button>
                     </div>
                     <div>
-                        <button class="operations" id="enter">Enter</button>
+                        <button class="operations" id="equals">=</button>
                     </div>
                 </div>                
             </div>    
